my-ingress-eval.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-eval
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: my-service-eval
      port:
        number: 9300
